--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 
   <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
   <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
-  <link rel="import" href="../color-label.html">
+  <script src="../color-label.js"></script>
 
   <custom-style>
     <style is="custom-style" include="demo-pages-shared-styles"></style>
