--- a/test/color-label.html
+++ b/test/color-label.html
@@ -10,7 +10,7 @@
   <script src="../../webcomponentsjs/webcomponents-loader.js"></script>
   <script src="../../web-component-tester/browser.js"></script>
 
-  <link rel="import" href="../color-label.html">
+  <script src="../color-label.js"></script>
 </head>
 
 <body>
